--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  width: 400px;
+  height: 500px;
+  background-color: #66339922;
+  border: 2px solid rebeccapurple;
+  border-radius: 4px;
+  margin: 20px auto;
+}
