--- a/src/components/Paddle.css
+++ b/src/components/Paddle.css
@@ -3,10 +3,20 @@
     height: 100px;
     background-color: rebeccapurple;
     border-radius: 4px;
+    /* Positioning */
+    position: absolute;
+    right: 10px;
+    transform: translateY(45%);
+
   }
   
 .paddle.player2 {
  
   background-color: salmon;
+  /* Positioning */
+  position: absolute;
+  left: 10px;
+  /* position along the Y axis of a coordinate plane, ensure that the container position is set to relative to keep paddles within the bounds */
+  transform: translateY(30%);
   
 }
