--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,11 @@ code {
 
 .container {
   width: 400px;
-  height: 500px;
+  height: 300px;
   background-color: #66339922;
   border: 2px solid rebeccapurple;
   border-radius: 4px;
   margin: 20px auto;
+  /* IMPORTANT to have container position relative */
+  position: relative;
 }
