added ball, added reducer to handle paddle movements, changed colors

--- a/src/components/Paddle.css
+++ b/src/components/Paddle.css
@@ -1,20 +1,20 @@
 .paddle {
     width: 25px;
     height: 100px;
-    background-color: rebeccapurple;
+    background-color: #990000;
     border-radius: 4px;
     /* Positioning */
 
     position: absolute;
     left: 10px;
     top: 50%;
-    transform: translateY(-50%);
+    
 
   }
   
 .paddle.player2 {
  
-  background-color: salmon;
+  background-color: #C0C0C0;
   /* Positioning */
 
   position: absolute;
